# Aspose.Note-FOSS-for-Python

./: .gitignore  LICENSE  README.md  SimpleTable.one  ms-one_spec_structure.txt  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  publish-pypi.yml
docs/: onenote-api.md
docs/ms-one/: 00-entity-scope.md  README.md  python-implementation-plan.md
docs/ms-onestore/: 00-roadmap.md  01-binary-reader.md  02-common-types.md  03-header.md  04-free-chunk-list.md  05-transaction-log.md  06-file-node-list.md  07-file-node-core.md  README.md  (+14 more)
examples/: .gitignore  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  export_pdf.py  extract_text.py  pyproject.toml  save_images.py
language-agnostic-plan/: 00-glossary.md  01-layering-and-interfaces.md  21-onestore-to-one-pipeline.md  31-one-to-aspose-pipeline.md  32-msone-to-aspose-name-map.md  50-roadmap-and-milestones.md  90-implementation-checklists.md  README.md  ms-onestore_structures_extract.txt
testfiles/: 3ImagesWithDifferentAlignment.one  AttachedFileWithTag.one  FormattedRichText.one  ImageWithTag.one  NumberedListWithTags.one  OnePageWithFile.one  SimpleHistory.one  SimpleImageFromSeparateFile.one  TableWithTag.one  TagSizes.one
tests/: __init__.py  _bootstrap.py  test_aspose_note_compat_smoke.py  test_imports_smoke.py  test_integration_3images_with_different_alignment.py  test_integration_simpletable.py  test_ms_one_simpletable.py  test_object_data_structures.py  test_onenote_api.py  test_pdf_export.py
tools/: debug_ms_one_tree.py  debug_pdf_text_ops.py  debug_revision_tags.py  dump_simpletable_summary.py
(+46 files in other folders)
