[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onestore"
version = "0.1.0"
description = "Reader for MS OneStore (.one/.onetoc2) based on MS-ONESTORE"
readme = "docs/ms-onestore/README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Aspose"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
